i have done some changes

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,4 +1,18 @@
+
 {% extends "layout.html" %}
+
 {% block content %}
-    <h1>About Page</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="jumbotron">
+                <h1 class="display-4">About Page</h1>
+                <p class="lead">Welcome to the About Page of our Flask App.</p>
+                <hr class="my-4">
+                <p>This page provides information about our app.</p>
+                <a class="btn btn-primary btn-sm" href="/" role="button">Back to Home</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
