--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -1,52 +1,62 @@
 {% extends "layout.html" %}
+
 {% block content %}
-    <div class="content-section">
-        <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
-                <div class="form-group">
-                    {{ form.email.label(class="form-control-label") }}
-                    {% if form.email.errors %}
-                        {{ form.email(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.email.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.email(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }}
-                    {% if form.password.errors %}
-                        {{ form.password(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.password(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-check">
-                    {{ form.remember(class="form-check-input") }}
-                    {{ form.remember.label(class="form-check-label") }}
-                </div>
-            </fieldset>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-                <small class="text-muted ml-2">
-                    <a href="{{ url_for('users.reset_request') }}">Forgot Password?</a>
-                </small>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <form method="POST" action="">
+                        {{ form.hidden_tag() }}
+                        <fieldset class="mx-5 px-5 py-3">
+                            <legend class="border-bottom mb-4 text-center">
+                                <span class="text-muted">LogIn</span>
+                            </legend>
+                        
+                            <div class="form-group">
+                                {{ form.email.label(class="form-control-label") }}
+                                {% if form.email.errors %}
+                                    {{ form.email(class="form-control is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.email.errors %}
+                                            {{ error }}
+                                            {% endfor %}
+                                            </div>
+                                            {% else %}
+                                    {{ form.email(class="form-control") }}
+                                    {% endif %}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form.password.label(class="form-control-label") }}
+                                        {% if form.password.errors %}
+                                    {{ form.password(class="form-control is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.password.errors %}
+                                            {{ error }}
+                                            {% endfor %}
+                                            </div>
+                                            {% else %}
+                                    {{ form.password(class="form-control") }}
+                                    {% endif %}
+                                    </div>
+                            <div class="form-check mb-3">
+                                {{ form.remember(class="form-check-input") }}
+                                {{ form.remember.label(class="form-check-label") }}
+                            </div>
+                            <div class="form-group text-center">
+                                <div class="d-flex justify-content-center"> {{ form.submit(class="btn btn-primary w-25") }}</div>
+                                <small class="text-muted mt-2 d-block">
+                                    <a href="{{ url_for('users.reset_request') }}">Forgot Password?</a>
+                                </small>
+                            </div>
+                        </fieldset>
+                    </form>
+                    </div>
             </div>
-        </form>
-    </div>
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            Need An Account? <a class="ml-2" href="{{ url_for('users.register') }}">Sign Up Now</a>
-        </small>
-    </div>
+            <div class="border-top pt-3 mt-3 text-center">
+                <small class="text-muted">Need An Account? <a href="{{ url_for('users.register') }}">Sign Up Now</a></small>
+            </div>
+            </div>
+            </div>
+            </div>
 {% endblock content %}
