--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -1,80 +1,151 @@
 body {
-    background: #e7e7e7;
+  background: #e7e7e7;
     color: #333333;
     margin-top: 5rem;
+    font-family: 'Times New Roman', Times, serif;
   }
 
-  h1, h2, h3, h4, h5, h6 {
-    color: #444444;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #444444;
+}
 
-  .bg-steel {
-    background-color: #0c2136;
-  }
+.bg-steel {
+  background-color: #0c2136;
+}
 
-  .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
-  }
+.site-header .navbar-nav .nav-link {
+  color: #cbd5db;
+}
 
-  .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
-  }
+.site-header .navbar-nav .nav-link:hover {
+  color: #ffffff;
+}
 
-  .site-header .navbar-nav .nav-link.active {
-    font-weight: 500;
-  }
+.site-header .navbar-nav .nav-link.active {
+  font-weight: 500;
+}
 
-  .content-section {
-    background: #ffffff;
-    padding: 10px 20px;
-    border: 1px solid #dddddd;
-    border-radius: 3px;
-    margin-bottom: 20px;
-  }
+.content-section {
+  background: #ffffff;
+  padding: 10px 20px;
+  border: 1px solid #dddddd;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
 
-  .article-title {
-    color: #444444;
-  }
+.article-title {
+  color: #444444;
+}
 
-  a.article-title:hover {
-    color: #428bca;
-    text-decoration: none;
-  }
+a.article-title:hover {
+  color: #428bca;
+  text-decoration: none;
+}
 
-  .article-content {
-    white-space: pre-line;
-  }
+.article-content {
+  white-space: pre-line;
+}
 
-  .article-img {
-    height: 65px;
-    width: 65px;
-    margin-right: 16px;
-  }
+.article-img {
+  height: 65px;
+  width: 65px;
+  margin-right: 16px;
+}
 
-  .article-metadata {
-    padding-bottom: 1px;
-    margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3
-  }
+.article-metadata {
+  padding-bottom: 1px;
+  margin-bottom: 4px;
+  border-bottom: 1px solid #e3e3e3
+}
 
-  .article-metadata a:hover {
-    color: #333;
-    text-decoration: none;
-  }
+.article-metadata a:hover {
+  color: #333;
+  text-decoration: none;
+}
 
-  .article-svg {
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
-  }
+.article-svg {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+}
 
-  .account-img {
-    height: 125px;
-    width: 125px;
-    margin-right: 20px;
-    margin-bottom: 16px;
-  }
+.account-img {
+  height: 125px;
+  width: 125px;
+  margin-right: 20px;
+  margin-bottom: 16px;
+}
 
-  .account-heading {
-    font-size: 2.5rem;
-  }
+.account-heading {
+  font-size: 2.5rem;
+}
+
+.error-container {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.error-heading {
+  font-size: 4rem;
+  color: #dc3545;
+}
+
+.error-message {
+  font-size: 1.2rem;
+  color: #6c757d;
+  margin-bottom: 30px;
+}
+
+.error-image {
+  width: 300px;
+  margin-bottom: 30px;
+}
+
+.home-link {
+  color: #007bff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.home-link:hover {
+  text-decoration: underline;
+}
+
+.user-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-row {
+  display: flex;
+  /* border: 1px solid black; */
+  width: 100%;
+}
+
+.user-col-left {
+  flex: 0 0 33.333333%;
+  display: flex;
+  max-width: 33.333333%;
+  justify-content: end;
+  /* border: 1px solid black; */
+}
+
+.user-col-right {
+  flex: 0 0 58.333333%;
+  max-width: 58.333333%;
+  align-items: center;
+  /* border: 1px solid black; */
+}
+
+.user-img {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+}
