--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -1,40 +1,49 @@
 {% extends "layout.html" %}
+
 {% block content %}
-<div class="content-section">
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">{{ legend }}</legend>
-            <div class="form-group">
-                {{ form.title.label(class="form-control-label") }}
-                {% if form.title.errors %}
-                    {{ form.title(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.title.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.title(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                {{ form.content.label(class="form-control-label") }}
-                {% if form.content.errors %}
-                    {{ form.content(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.content.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.content(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-        </fieldset>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info") }}
-        </div>
-    </form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <form method="POST" action="">
+                        {{ form.hidden_tag() }}
+                        <fieldset class="form-group mx-5 px-5 py-3">
+                            <legend class="border-bottom mb-4">{{ legend }}</legend>
+                            <div class="form-group">
+                                {{ form.title.label(class="form-control-label") }}
+                                {% if form.title.errors %}
+                                {{ form.title(class="form-control is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.title.errors %}
+                                    {{ error }}
+                                    {% endfor %}
+                                    </div>
+                                    {% else %}
+                                {{ form.title(class="form-control") }}
+                                {% endif %}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.content.label(class="form-control-label") }}
+                                    {% if form.content.errors %}
+                                {{ form.content(class="form-control is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.content.errors %}
+                                    {{ error }}
+                                    {% endfor %}
+                                    </div>
+                                    {% else %}
+                                {{ form.content(class="form-control") }}
+                                {% endif %}
+                                </div>
+                            <div class="form-group d-flex justify-content-end">
+                                {{ form.submit(class="btn btn-primary ") }}
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+                </div>
+                </div>
+                </div>
 </div>
 {% endblock content %}
