--- a/flaskblog/templates/errors/500.html
+++ b/flaskblog/templates/errors/500.html
@@ -1,7 +1,20 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
+<!-- <div class="content-section">
         <h1>Something went wrong (500)</h1>
         <p>We're experiencing some trouble on our end. Please try again in the near future</p>
-    </div>
+    </div> -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="error-container">
+                    <h1 class="error-heading">500</h1>
+                    <p class="error-message">Oops! It seems like the page you are looking for doesn't exist.</p>
+                    <p>Don't worry, let's get you back on track. You can go back to our <a href="/"
+                            class="home-link">homepage</a> or try searching for what you're looking for.</p>
+                    <img src="https://via.placeholder.com/300" alt="404 Error Image" class="error-image">
+                </div>
+            </div>
+        </div>
+</div>
 {% endblock content %}
