--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -59,18 +59,28 @@
           {% block content %}{% endblock %}
         </div>
         <div class="col-md-4">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+          <div class="card mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Our Sidebar</h3>
+              <p class="card-text text-muted">You can put any information here you'd like.</p>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Latest Posts</li>
+                <li class="list-group-item">Announcements</li>
+                <li class="list-group-item">Calendars</li>
+                <li class="list-group-item">etc</li>
               </ul>
-            </p>
-          </div>
-        </div>
+                  <hr>
+                  <h5 class="card-title">Follow Us</h5>
+                  <ul class="list-unstyled">
+                    <li><a href="#" class="text-muted">Facebook</a></li>
+                    <li><a href="#" class="text-muted">Twitter</a></li>
+                    <li><a href="#" class="text-muted">Instagram</a></li>
+                    <li><a href="#" class="text-muted">LinkedIn</a></li>
+                  </ul>
+                  </div>
+                  </div>
+      </div>
+
       </div>
     </main>
 
